--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,11 @@
-$blue: #0463f1;
-$white: #fff;
+$blue: #f2f3ee;
+
+$white: #8d511e;
 $contsct: #0d44d1;
 $contsctDark: #083ec8;
-$purple: #3a2964;
-$lightBorderForBlackBtn: #523b8d;
-$lightPurple: #8774b8;
+$purple: #384661;
+$lightBorderForBlackBtn: #38466193;
+$lightPurple: #38466193;
 $darkBlue: #171226;
 $tableDark: #221939;
 $tableLidhtDark: #281d42;
