--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,5 +1,5 @@
-@import '../variables';
-@import '../mixins';
+@import "../variables";
+@import "../mixins";
 
 .header-plug {
   height: 90px;
@@ -36,10 +36,15 @@
 }
 
 .logo_img {
-  margin-top: 4px;
+  // margin-top: 4px;
   width: 200px;
-  height: 41px;
+  // height: 41px;
   cursor: pointer;
+  font-size: 48px;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  align-self: center;
 
   @media (max-width: $largeScreens) {
     display: none;
