--- a/src/assets/scss/components/shop/_card.scss
+++ b/src/assets/scss/components/shop/_card.scss
@@ -77,7 +77,7 @@
 }
 .oneColumnCardHaveBack {
   border-radius: 12px;
-  background-color: #221939;
+  background-color: #1e1d20;
   grid-column: span 1;
   padding-top: 19px;
   padding-bottom: 20px;
