--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -40,3 +40,57 @@
   -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
 }
+
+.box-main-page {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 0.8fr 0.2fr;
+}
+
+.list-filter {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  background-color: #87501d;
+  margin-right: 12px;
+  margin-top: 20px;
+
+  h1 {
+    padding-left: 12px;
+    color: #f2f3ee;
+  }
+  p {
+    cursor: pointer;
+  }
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 12px;
+}
+
+p.active-section-list-filter {
+  margin-left: 12px;
+  background-color: #f2f3ee;
+
+  color: #87501d;
+
+  width: max-content;
+  padding: 3px;
+  border-radius: 5px;
+}
+p.section-list-filter {
+  margin-left: 12px;
+  width: max-content;
+  padding: 3px;
+  color: #f2f3ee;
+}
+.header-box-filter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  p {
+    color: #f2f3ee;
+    padding-right: 12px;
+  }
+}
