--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -52,13 +52,15 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  background-color: #87501d;
+  // background-color: #87501d;
   margin-right: 12px;
   margin-top: 20px;
+  border: 2px solid #87501d;
 
   h1 {
     padding-left: 12px;
-    color: #f2f3ee;
+    color: #87501d;
+    font-size: 20px;
   }
   p {
     cursor: pointer;
@@ -82,7 +84,7 @@ p.section-list-filter {
   margin-left: 12px;
   width: max-content;
   padding: 3px;
-  color: #f2f3ee;
+  color: #87501d;
 }
 .header-box-filter {
   display: flex;
