--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -32,6 +32,9 @@
   font-size: 14px;
   display: flex;
   align-items: start;
+  p {
+    color: #87501d;
+  }
   cursor: pointer;
 }
 .box-symbols {
