--- a/src/assets/scss/components/UI/_search-input.scss
+++ b/src/assets/scss/components/UI/_search-input.scss
@@ -1,7 +1,10 @@
 @import "../../variables";
 .searchInputWrap {
   position: relative;
-  width: calc(100% - 4px);
+  width: 100%;
+  // padding-right: 20px;
+  // padding-left: 20px;
+  margin-top: 20px;
 }
 
 .searchIcon {
@@ -12,8 +15,9 @@
 }
 
 .searchInput {
-  background-color: $purple;
-  border: none;
+  background-color: white;
+  border: 2px solid #724318;
+  color: #724318;
   padding: 13px;
   padding-left: 48px;
   width: 100%;
