--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -37,7 +37,7 @@
 
 .logo_img {
   // margin-top: 4px;
-  width: 200px;
+  // width: 200px;
   // height: 41px;
   cursor: pointer;
   font-size: 48px;
