--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -1,2 +1,70 @@
 .box-case {
+  width: 100%;
+  height: 100px;
+  border-radius: 12px;
+  background-color: transparent;
+  border: 2px solid #384661;
+  cursor: pointer;
+}
+.header-box-case {
+  background-color: #384661;
+  height: 50px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 12px;
+  span {
+  }
+}
+.item-base-value-case {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.base-value-case {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  gap: 20px;
+  justify-content: start;
+  p {
+    color: #bb9f87;
+    font-size: 10px;
+  }
+  padding-left: 12px;
+}
+.value-case {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  p {
+    color: #bb9f87;
+    font-size: 12px;
+    padding-left: 8px;
+  }
+}
+.body-box-case {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.case-specialization {
+  color: #734a27;
+}
+.box-specializations {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 12px;
 }
