--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -1,8 +1,9 @@
 .box-case {
   width: 100%;
-  height: 100px;
+  min-height: 150px;
+  height: max-content;
   border-radius: 12px;
-  background-color: transparent;
+  background-color: white;
   border: 2px solid #384661;
   cursor: pointer;
 }
@@ -33,7 +34,7 @@
   gap: 20px;
   justify-content: start;
   p {
-    color: #bb9f87;
+    color: #734a27;
     font-size: 10px;
   }
   padding-left: 12px;
@@ -44,14 +45,15 @@
   align-items: center;
   justify-content: center;
   p {
-    color: #bb9f87;
+    color: #734a27;
     font-size: 12px;
     padding-left: 8px;
   }
 }
 .body-box-case {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
+  height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -65,6 +67,42 @@
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: start;
+}
+.box-price {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: end;
   padding-right: 12px;
+  p {
+    color: #734a27;
+    padding-left: 8px;
+  }
+}
+.box-list-tags {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 12px;
+}
+.box-tags {
+  padding: 5px;
+  background-color: #d8beaf;
+  color: #f2f3ee;
+  border-radius: 8px;
+  white-space: nowrap;
+  p {
+    font-size: 12px;
+    white-space: nowrap;
+  }
 }
