--- a/src/assets/scss/components/_scale-online.scss
+++ b/src/assets/scss/components/_scale-online.scss
@@ -1,5 +1,5 @@
-@import '../variables';
-@import '../mixins';
+@import "../variables";
+@import "../mixins";
 
 .boxScaleWithTitle {
   max-width: 268px;
@@ -14,6 +14,7 @@
   margin-bottom: 9px;
 }
 p {
+  color: white;
   padding: 0;
   margin: 0;
 }
@@ -25,24 +26,28 @@ p {
   }
 }
 .boxScale {
-  background-color: #251d3c;
+  background-color: transparent;
   height: 24px;
   max-width: 268px;
   width: 100%;
+  border: 2px solid #855022;
 
-  border-radius: 6px;
+  border-radius: 8px;
   @media (max-width: $largeScreens) {
     width: 100%;
   }
 }
 .activeScale {
   @include displayFlexAIC;
-  background: -webkit-linear-gradient(left, rgba(64, 70, 235, 1), rgba(65, 159, 255, 1));
+  background: #b79b83;
   width: 50%;
   height: 100%;
   border-radius: 6px;
   display: flex;
   padding-left: 12px;
+  p {
+    color: #f2f3ee;
+  }
 }
 .labelScale {
   font-weight: 600;
