--- a/src/assets/scss/components/footer/_monitoring-modal.scss
+++ b/src/assets/scss/components/footer/_monitoring-modal.scss
@@ -7,7 +7,8 @@
 .monitoringModalContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
+  width: 100%;
   gap: 12px;
   padding-bottom: 20px;
   max-height: 500px;
@@ -25,12 +26,13 @@
   }
 
   &::-webkit-scrollbar-track {
-    background-color: #140f21;
+    background-color: #f2f3ee;
+    margin-left: 12px;
   }
 
   &::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 100px;
-    background-color: $lightPurple;
+    background-color: white;
   }
 }
