--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -48,6 +48,7 @@
   grid-template-columns: 0.7fr 0.3fr;
   column-gap: 20px;
   padding-bottom: 20px;
+  align-items: start;
   .lightBtn {
     width: 100%;
     padding: 15px;
@@ -175,4 +176,33 @@ p.section-list-filter {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.box-form-create-case-modal {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-right: 12px;
+  p {
+    color: #76532d;
+    font-size: 12px;
+    padding-bottom: 8px;
+  }
+}
+textarea.textarea-description {
+  width: 100%;
+  border-radius: 12px;
+  padding: 12px;
+}
+
+textarea::-webkit-scrollbar {
+  display: none;
+}
+input[type="file"] {
+  background-color: white;
+}
+input[type="file"] {
+  button {
+    background-color: red;
+  }
 }
