create-add-response

--- a/src/assets/scss/pages/_deal.scss
+++ b/src/assets/scss/pages/_deal.scss
@@ -118,6 +118,11 @@ h1.header-deal-page {
     padding: 12px;
   }
 }
+.avatar-customer {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
 .body-deal-page {
   width: 100%;
   height: auto;
