--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -1,5 +1,5 @@
-@import '../mixins';
-@import '../variables';
+@import "../mixins";
+@import "../variables";
 .profile-top {
   background: linear-gradient(180deg, #140f21 0%, #201f4e 74.48%);
   height: 315px;
