--- a/src/assets/scss/pages/_deal.scss
+++ b/src/assets/scss/pages/_deal.scss
@@ -135,3 +135,19 @@ h1.header-deal-page {
   width: 100%;
   height: auto;
 }
+.item-response {
+  width: 100%;
+  height: auto;
+  border: #384661;
+}
+.box-responses {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  p {
+    color: #734319;
+    // font-size: 12px;
+  }
+}
