--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -7,18 +7,27 @@
   margin-top: 20px;
   height: 200px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &-container {
     width: 100%;
     height: 100%;
     display: flex;
+    gap: 28px;
     align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: start;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   &_inner {
     height: 100%;
+    p {
+      padding-top: 8px;
+    }
     width: 100%;
     @include displayFlexAIC;
     justify-content: space-between;
@@ -122,4 +131,49 @@
   border-radius: 50%;
   width: 64px;
   height: 64px;
+}
+.box-rating-in-profile {
+  height: 100%;
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 28px;
+}
+.switch-roles-box {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid #384661;
+  border-radius: 12px;
+  background-color: transparent;
+}
+.item-switch-role {
+  width: 50%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding-right: 12px;
+  padding-left: 12px;
+  color: #384661;
+}
+.item-switch-role-active {
+  background-color: #384661;
+  color: #f2f3ee;
+  border-radius: 12px;
+}
+.box-profile {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 0.8fr 0.2fr;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
