--- a/src/assets/scss/pages/_deal.scss
+++ b/src/assets/scss/pages/_deal.scss
@@ -137,7 +137,7 @@ h1.header-deal-page {
 }
 .body-deal-page {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 .item-response {
   width: 100%;
