--- a/src/assets/scss/components/modals/_confirmation.scss
+++ b/src/assets/scss/components/modals/_confirmation.scss
@@ -11,7 +11,8 @@
 .confirmationBtn {
   width: 50%;
   padding: 13px 60px;
-
+  height: 50px;
+  margin-top: 0 !important;
   @media (max-width: 425px) {
     width: 100%;
     padding: 16px 0;
@@ -20,6 +21,7 @@
 
 .content {
   display: flex;
+  align-items: center;
   @media (max-width: 425px) {
     flex-direction: column;
   }
