create-balance-page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,7 @@
 @import "./pages/profile";
 @import "./pages/information";
 @import "./pages/main";
+@import "./pages/history-balance";
 //компоненты
 
 @import "./components/megaBuilderKitModal/megaBuilderKitModal";
