--- a/src/assets/scss/pages/_deal.scss
+++ b/src/assets/scss/pages/_deal.scss
@@ -47,6 +47,11 @@ h1.header-deal-page {
 .box-rating {
   margin-top: 8px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  p {
+    text-align: center;
+  }
 }
 .content-deal-page {
   width: 100%;
