--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -177,3 +177,18 @@
   align-items: center;
   justify-content: center;
 }
+.bezBtn {
+  background-color: #dac2aa;
+  padding: 5px;
+  border-radius: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: white;
+}
