--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -5,10 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #384661;
+  color: #111111;
   h1 {
-    color: #384661;
-    margin-bottom: 40px;
+    color: #ff0000;
+    margin-bottom: 18px;
   }
   justify-content: center;
   .lightBtn {
@@ -17,15 +17,27 @@
   }
 }
 .box-form-login {
-  color: #384661;
+  color: #111111;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
+  p {
+    color: #111111;
+    text-align: start;
+    align-self: start;
+  }
 }
+// .box-form-reg {
+//   display: grid;
+//   grid-template-rows: 1fr 1fr;
+// }
 .box-formik-login {
-  width: 400px;
+  width: 100%;
+  padding-left: 12px;
+  padding-right: 12px;
+  max-width: 400px;
 }
 .box-sign-up {
   width: 100%;
@@ -33,7 +45,7 @@
   display: flex;
   align-items: start;
   p {
-    color: #87501d;
+    color: #111111;
   }
   cursor: pointer;
 }
@@ -43,21 +55,9 @@
   flex-direction: row;
   margin-bottom: 40px;
 }
-.waviy {
-  position: relative;
-}
-.waviy span {
-  position: relative;
-  display: inline-block;
-  font-size: 150px;
-  color: #855022;
-  text-transform: uppercase;
-  animation: flip 2s infinite;
-  animation-delay: calc(0.2s * var(--i));
-}
-@keyframes flip {
-  0%,
-  80% {
-    transform: rotateY(360deg);
+.item-form-login {
+  width: 100%;
+  p {
+    padding-bottom: 8px;
   }
 }
