--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -299,6 +299,41 @@ input[type="number"]:focus {
   transform-origin: bottom;
   animation: rotate 1s linear infinite;
 }
+.train-logo {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: #333;
+  border-radius: 15px;
+  // top: 0;
+  // left: -13px;
+  margin-right: 12px;
+  margin-left: 12px;
+  transform-origin: bottom;
+  // animation: rotate 5s linear infinite;
+}
+.train-logo:before {
+  content: "";
+  position: absolute;
+  background-color: #ced4da;
+  width: 20px;
+  height: 15px;
+  left: 9px;
+  top: 15px;
+  box-shadow: 22px 0 #ced4da;
+}
+
+.train-logo:after {
+  content: "";
+  position: absolute;
+  background-color: #ced4da;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  top: 45px;
+  left: 10px;
+  box-shadow: 30px 0px #ced4da;
+}
 
 .train:before {
   content: "";
