--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -45,7 +45,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 0.7fr 0.3fr;
+  grid-template-columns: 1fr;
   column-gap: 20px;
   padding-bottom: 20px;
   align-items: start;
