--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -96,9 +96,9 @@ input[type="number"]:focus {
   @media (max-width: 1290px) {
     padding: 0 20px;
   }
-  @media (max-width: 700px) {
-    padding: 0;
-  }
+  // @media (max-width: 700px) {
+  //   padding: 0;
+  // }
 }
 .titlePage {
   color: #fff;
