--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,3 +21,6 @@
 @import "./components/leaders/pedestal-item";
 @import "./components/select-server-modal/select-server-modal";
 @import "./components/funds-transfer-modal/funds-transfer-modal";
+@import "react-datepicker/dist/react-datepicker";
+@import url("https://cdnjs.cloudflare.com/ajax/libs/react-datepicker/2.8.0/react-datepicker.min.css");
+@import "~react-datepicker/dist/react-datepicker.css";
