--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -221,3 +221,41 @@ input[type="file"] {
     background-color: red;
   }
 }
+
+.datePicker {
+  background-color: transparent;
+  // margin-top: 12px;
+  input {
+    color: black;
+    height: 30px;
+    border-radius: 8px;
+    padding-left: 12px;
+    font-size: 16px;
+    border: 2px solid #ff0000;
+  }
+}
+.react-datepicker__day--selected {
+  background-color: #ff0000 !important;
+}
+.box-filters {
+  margin-top: 12px;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  p {
+    color: #111111;
+    padding: 0;
+    padding-right: 12px;
+  }
+  @media (max-width: $largeScreens) {
+    flex-direction: column;
+  }
+}
+.item-filters {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
