--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -231,8 +231,8 @@ input[type="file"] {
     border-radius: 8px;
     padding-left: 12px;
     font-size: 16px;
-    box-sizing: border-box;
-    height: 45px;
+    // box-sizing: border-box;
+    height: 48px;
     border: 2px solid #ff0000;
   }
 }
