--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -189,6 +189,7 @@ button.btnInUser {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 200px;
   justify-content: center;
   p {
     color: #111111;
