--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -160,3 +160,62 @@ h1.header-deal-page {
     // font-size: 12px;
   }
 }
+.box-place {
+  // position: relative;
+  width: 40px;
+  height: 40px;
+  background-color: red;
+  border-radius: 5px;
+  text-align: center;
+  text-justify: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // bottom: 50px;
+  // right: 0;
+}
+.box-wagon {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  background-color: #f3f3f3;
+  border: 2px solid #111111;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.box-polka {
+}
+
+.img-wagon {
+  width: 300px;
+}
+.line-places {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  // padding-top: 25px;
+  // padding-bottom: 25px;
+  height: 100%;
+}
+.wagon-gap {
+  width: 20px;
+  background-color: #f3f3f3;
+  height: 100%;
+}
+.top-wagon {
+  width: 50px;
+  height: 100%;
+  background-color: #f3f3f3;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.bottom-wagon {
+  width: 50px;
+  height: 100%;
+  background-color: #f3f3f3;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
