--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -158,7 +158,7 @@ button.btnInUser {
     justify-content: center;
   }
 }
-.place-item {
+.place-item-card {
   display: flex;
   flex-direction: column;
   align-items: center;
