--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -6,16 +6,21 @@ h1.header-deal-page {
   padding-top: 20px;
   align-items: center;
   justify-content: center;
-  display: grid;
-  grid-template-columns: 0.8fr 0.2fr;
-  gap: 20px;
-  a {
-    color: #734319;
-  }
+  // margin-top: 12px;
+  // display: grid;
+  // grid-template-columns: 0.8fr 0.2fr;
+  // gap: 20px;
+  // a {
+  //   color: #734319;
+  // }
   .lightBtn {
     padding: 12px;
     font-size: 16px;
     margin-top: 12px;
+  }
+  h2,
+  p {
+    color: #111111;
   }
 }
 .info-of-customer {
@@ -164,19 +169,79 @@ h1.header-deal-page {
   // position: relative;
   width: 40px;
   height: 40px;
-  background-color: red;
+  border: 1px solid #111111;
+  // background-color: red;
   border-radius: 5px;
   text-align: center;
   text-justify: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #111111;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
   // bottom: 50px;
   // right: 0;
+  h1 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 12px;
+  }
+}
+
+.box-place-top {
+  width: 40px;
+  height: 40px;
+  // background-color: red;
+  text-align: center;
+  text-justify: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border: 1px solid #111111;
+  color: #111111;
+  cursor: pointer;
+  h1 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 12px;
+  }
+}
+.box-place-bottom {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  text-justify: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border: 1px solid #111111;
+  color: #111111;
+  cursor: pointer;
+  h1 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 12px;
+  }
 }
 .box-wagon {
   width: 100%;
-  height: 150px;
+  max-width: 100vw;
+  overflow-x: auto;
+  min-height: 150px;
+  height: 100%;
   display: flex;
   flex-direction: row;
   background-color: #f3f3f3;
@@ -184,6 +249,16 @@ h1.header-deal-page {
   border-radius: 8px;
   padding-top: 8px;
   padding-bottom: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.wagon-gap-razdel {
+  border-left: 2px solid red;
+  padding-left: 8px;
+  margin-left: 8px;
+  width: auto;
+  // height: 100%;
 }
 .box-polka {
 }
@@ -199,11 +274,16 @@ h1.header-deal-page {
   // padding-top: 25px;
   // padding-bottom: 25px;
   height: 100%;
+  gap: 10px;
 }
 .wagon-gap {
   width: 20px;
+  box-sizing: border-box;
   background-color: #f3f3f3;
   height: 100%;
+  // &:last-child{
+
+  // }
 }
 .top-wagon {
   width: 50px;
@@ -211,6 +291,9 @@ h1.header-deal-page {
   background-color: #f3f3f3;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .bottom-wagon {
   width: 50px;
@@ -218,4 +301,68 @@ h1.header-deal-page {
   background-color: #f3f3f3;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-wagon::-webkit-scrollbar {
+  width: 1px; /* ширина всей полосы прокрутки */
+}
+
+.box-wagon::-webkit-scrollbar-track {
+  background: transparent; /* цвет зоны отслеживания */
+}
+
+.box-wagon::-webkit-scrollbar-thumb {
+  background-color: transparent; /* цвет бегунка */
+  border-radius: 20px; /* округлось бегунка */
+  // border: 1px solid black; /* отступ вокруг бегунка */
+  width: 1px;
+}
+.place-item {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+// .box-wagon-with-title {
+//   display: flex;
+//   flex-direction: column;
+//   h2 {
+//     color: #111111;
+//     margin-top: 12px;
+//     margin-bottom: 12px;
+//   }
+// }
+.title-box-wagon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 12px;
+  gap: 10px;
+  button {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    font-size: 20px;
+  }
+}
+.info-train {
+  height: 100%;
+  width: 100%;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.box-flight {
+  height: 100%;
+  width: 100%;
+}
+.place-busy {
+  background-color: rgba(89, 89, 89, 0.416);
+  opacity: 0.4;
+}
+.place-bad {
+  background-color: #734319;
 }
