--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -378,3 +378,30 @@ h1.header-deal-page {
   background-color: #425a6a7b;
   opacity: 0.8;
 }
+.help-info-flight {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-bottom: 12px;
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    justify-content: start;
+    gap: 5px;
+  }
+}
+.box-help-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  h2 {
+    margin-left: 8px;
+    font-size: 14px;
+    font-weight: 400;
+  }
+  @media (max-width: 1000px) {
+    justify-content: start;
+  }
+}
