--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -112,7 +112,7 @@
   // width: 100%;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   flex-wrap: wrap;
   // flex-direction: column;
   align-items: start;
@@ -121,6 +121,7 @@
   padding-right: 12px;
   padding-left: 12px;
   padding-top: 12px;
+  padding-bottom: 12px;
 }
 .box-tags {
   padding: 5px;
