create-change-params-modal

--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -189,7 +189,7 @@ p.section-list-filter {
   gap: 20px;
   padding-right: 12px;
   p {
-    color: #76532d;
+    color: #111111;
     font-size: 12px;
     padding-bottom: 8px;
     padding-top: 8px;
