--- a/src/assets/scss/components/UI/_input.scss
+++ b/src/assets/scss/components/UI/_input.scss
@@ -17,13 +17,13 @@
 
 .input {
   border-radius: 12px;
-  border: 1px solid #76532d;
+  border: 1px solid #111111;
   // background-color: #f2f3ee;
   padding: 13px 12px;
   // border: none;
   width: 100%;
   font-size: 14px;
-  color: #76532d;
+  color: #111111;
   &PaddingRight {
     padding-right: 48px;
   }
