--- a/src/assets/scss/components/UI/_modal.scss
+++ b/src/assets/scss/components/UI/_modal.scss
@@ -71,7 +71,7 @@
   border-radius: 12px;
 
   overflow: auto;
-  background-color: #f2f3ee;
+  background-color: #ffffff;
   overflow-x: hidden;
   // transform: scale(0.5);
   // transition: 0.4s;
@@ -112,7 +112,7 @@
   left: 0;
   height: 200px;
   width: 100%;
-  background-color: #f2f3ee;
+  background-color: #ffffff;
   color: #384661;
 }
 
@@ -129,7 +129,7 @@
 
   &Title {
     width: fit-content;
-    color: #384661;
+    color: #ff0000;
     font-size: 32px;
     font-weight: 700;
 
