--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -88,9 +88,9 @@
     margin-right: 8px;
   }
 
-  @media (max-width: $largeScreens) {
-    display: none;
-  }
+  // @media (max-width: $largeScreens) {
+  //   display: none;
+  // }
 }
 
 .profile {
