--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -44,6 +44,10 @@ h1.header-deal-page {
   p {
     color: #111111;
   }
+  @media (max-width: 1000px) {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 
 .info-of-customer {
