--- a/src/assets/scss/pages/_chat.scss
+++ b/src/assets/scss/pages/_chat.scss
@@ -13,6 +13,13 @@
   h1 {
     color: #ff0000;
   }
+  @media (max-width: 1000px) {
+    h1 {
+      font-size: 14px;
+    }
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 
 .box-chat {
@@ -48,6 +55,11 @@
   cursor: pointer;
 }
 .item-list-group {
+  @media (max-width: 1000px) {
+    p {
+      font-size: 12px;
+    }
+  }
 }
 
 .header-chat {
@@ -57,7 +69,7 @@
   text-align: center;
   align-items: center;
   justify-content: start;
-  background-color: #425a6a;
+  background-color: #111111;
   padding-left: 12px;
   border-radius: 12px;
 }
@@ -74,4 +86,55 @@
   background-color: #111111; /* цвет бегунка */
   border-radius: 20px; /* округлось бегунка */
   border: 3px solid white; /* отступ вокруг бегунка */
+}
+.box-messages {
+  padding-top: 12px;
+  width: 100%;
+  height: 85%;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.input-chat {
+  width: calc(100%);
+  height: 30px;
+  //   margin-left: 12px;
+  //   margin-right: 12px;
+}
+.send-messages {
+  padding-left: 12px;
+  padding-right: 12px;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #f3f3f3;
+  border-radius: 8px;
+}
+.item-message {
+  display: flex;
+  flex-direction: column;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 8px;
+}
+.my-message {
+  background-color: #425a6a;
+  justify-content: end;
+  p {
+    text-align: end;
+  }
+}
+
+.nomy-message {
+  background-color: white;
+  justify-content: start;
+  p {
+    text-align: start;
+    color: #111111;
+  }
 }
