--- a/src/assets/scss/pages/_chat.scss
+++ b/src/assets/scss/pages/_chat.scss
@@ -36,6 +36,7 @@
   grid-template-columns: 0.3fr 0.7fr;
   padding-top: 28px;
   overflow: hidden;
+  gap: 10px;
 }
 .item-list-group {
   height: 80px;
@@ -45,6 +46,7 @@
   border-radius: 8px;
   background-color: #f3f3f3;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   p {
