update-custom-select

--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -136,7 +136,7 @@ h1.header-deal-page {
     margin-top: 0px;
   }
   @media (max-width: 1000px) {
-    padding-top: 300px;
+    // padding-top: 300px;
   }
 }
 .item-dop-info {
