--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -409,3 +409,10 @@ input[type="number"]:focus {
   margin-left: -40px;
   padding-left: 18px !important;
 }
+.css-tj5bde-Svg {
+  display: inline-block;
+  fill: #111111 !important;
+  line-height: 1;
+  stroke: #111111 !important;
+  stroke-width: 0;
+}
