--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -27,7 +27,7 @@ h1.header-deal-page {
 .box-profile-page {
   padding-top: 20px;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   margin-top: 12px;
   display: grid;
   grid-template-columns: 0.8fr 0.2fr;
@@ -403,7 +403,7 @@ h1.header-deal-page {
 }
 
 .box-flight {
-  height: 100%;
+  // height: 100%;
   width: 100%;
 }
 .place-busy {
