--- a/src/assets/scss/pages/_chat.scss
+++ b/src/assets/scss/pages/_chat.scss
@@ -103,6 +103,9 @@
 .input-chat {
   width: calc(100%);
   height: 30px;
+  color: #111111;
+  padding-left: 12px;
+  border-radius: 12px;
   //   margin-left: 12px;
   //   margin-right: 12px;
 }
@@ -139,4 +142,10 @@
     text-align: start;
     color: #111111;
   }
+}
+.chatBtn {
+  // padding-top: 8px;
+  // padding-bottom: 8px;
+  // padding-left: ;
+  padding: 8px;
 }
