--- a/src/assets/scss/components/UI/_btn.scss
+++ b/src/assets/scss/components/UI/_btn.scss
@@ -33,7 +33,7 @@
 }
 
 .lightBtn {
-  background-color: #3d5d6d;
+  background-color: #3aaa35;
   color: white;
   background-size: 200% 100%;
   background-position: right bottom;
@@ -41,7 +41,7 @@
 
   &:hover {
     background-position: left bottom;
-    background-color: #466d80;
+    background-color: #43c43d;
   }
   span {
     color: white;
