--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -17,14 +17,14 @@
   }
 }
 .box-form-login {
-  color: #111111;
+  color: #8c8b90;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
   p {
-    color: #111111;
+    color: #8c8b90;
     text-align: start;
     align-self: start;
   }
@@ -38,6 +38,9 @@
   padding-left: 12px;
   padding-right: 12px;
   max-width: 400px;
+  h1 {
+    color: white;
+  }
 }
 .box-sign-up {
   width: 100%;
@@ -45,7 +48,7 @@
   display: flex;
   align-items: start;
   p {
-    color: #111111;
+    color: white;
   }
   cursor: pointer;
 }
