--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-color: #ffffff;
+  background-color: #212025;
   color: $white;
   height: 100%;
 }
@@ -392,14 +392,14 @@ input[type="number"]:focus {
 .box-train {
   width: 400px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  // align-items: center;
   justify-content: center;
   margin-bottom: 64px;
   p {
     color: #333;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 20px;
     margin-right: 32px;
     margin-left: 16px;
   }
@@ -415,4 +415,14 @@ input[type="number"]:focus {
   line-height: 1;
   stroke: #111111 !important;
   stroke-width: 0;
+}
+.title-login {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  margin-top: -80px;
+}
+.box-logo-login {
+  margin-left: 20px;
 }
