--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -6,13 +6,14 @@
 }
 
 .header {
-  background-color: #425a6a;
+  background-color: #212025;
   height: 90px;
   width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
+  border-bottom: 2px solid #333237;
 
   &_inner {
     height: 100%;
