--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -1,20 +1,21 @@
 .box-case {
   width: 100%;
-  min-height: 200px;
+  min-height: 100px;
   height: max-content;
   border-radius: 12px;
-  background-color: #f3f3f3;
+  background-color: #2a292e;
   // border: 2px solid #384661;
   cursor: pointer;
 }
 .header-box-case {
-  background-color: #f3f3f3;
+  background-color: #2a292e;
   height: 50px;
+
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
-  border-bottom: 2px solid #ff0000;
+  border-bottom: 2px solid #333237;
   span {
-    color: #111111;
+    color: white;
   }
 
   display: flex;
@@ -22,6 +23,7 @@
 
   padding-left: 12px;
   justify-content: space-between;
+  padding: 15px;
   span {
   }
 }
@@ -111,23 +113,38 @@
 .box-list-tags {
   // width: 100%;
   height: auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  // grid-template-columns: 1fr;
+  // flex-wrap: wrap;
   // flex-direction: column;
   align-items: start;
-  justify-content: start;
+  justify-content: space-between;
   gap: 10px;
   padding-right: 12px;
   padding-left: 12px;
   padding-top: 12px;
   padding-bottom: 12px;
+
+  .lightBtn {
+    width: min-content;
+    height: 40px;
+  }
+  .blackBtn {
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    // padding: 15px;
+  }
 }
 .box-tags {
   padding: 5px;
-  background-color: #fff;
-  color: #425a6a;
+  background-color: #3c3b40;
+  color: #8c8b90;
   border-radius: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   white-space: nowrap;
   p {
     font-size: 0.5vh;
@@ -194,5 +211,39 @@ button.btnInUser {
   justify-content: center;
   p {
     color: #111111;
+  }
+}
+
+.title-case-page {
+  margin-top: 20px;
+  h1 {
+    color: white;
+  }
+}
+.box-tags-case-page {
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  // grid-template-columns: 1fr;
+  // flex-wrap: wrap;
+  // flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  gap: 10px;
+  padding-right: 12px;
+  // padding-left: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.description-case-page {
+  p {
+    color: white;
+  }
+}
+
+.box-case-page {
+  .lightBtn {
+    margin-top: 20px;
+    padding: 15px;
   }
 }
