--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -65,12 +65,12 @@
   // background-color: #87501d;
   // margin-right: 12px;
   margin-top: 20px;
-  border: 2px solid #87501d;
+  border: 2px solid #3aaa35;
 
   h1 {
     padding-left: 12px;
-    color: #87501d;
-    font-size: 20px;
+    color: #3aaa35;
+    font-size: 18px;
   }
   p {
     cursor: pointer;
