--- a/src/assets/scss/components/footer/_monitoring-modal.scss
+++ b/src/assets/scss/components/footer/_monitoring-modal.scss
@@ -26,13 +26,13 @@
   }
 
   &::-webkit-scrollbar-track {
-    background-color: #f2f3ee;
+    background-color: #333237;
     margin-left: 12px;
   }
 
   &::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 100px;
-    background-color: white;
+    background-color: #57555d;
   }
 }
