--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -164,7 +164,7 @@ p.section-list-filter {
   background-color: #87501d;
 }
 .box-active-item-sort {
-  background-color: #ff0000;
+  background-color: #3aaa35;
   color: white;
   p {
     color: white;
@@ -189,7 +189,7 @@ p.section-list-filter {
   gap: 20px;
   padding-right: 12px;
   p {
-    color: #111111;
+    color: #fff;
     font-size: 12px;
     padding-bottom: 8px;
     padding-top: 8px;
