--- a/src/assets/scss/pages/_flight.scss
+++ b/src/assets/scss/pages/_flight.scss
@@ -40,6 +40,10 @@ h1.header-deal-page {
     font-size: 16px;
     margin-top: 12px;
   }
+  .blackBtn {
+    padding: 12px;
+    font-size: 16px;
+  }
   h2,
   p {
     color: #111111;
@@ -54,11 +58,11 @@ h1.header-deal-page {
   width: 100%;
   height: min-content;
   // min-height: 100px;
-  border: 2px solid #111111;
+  border: 2px solid white;
   border-radius: 8px;
   padding: 12px;
   p {
-    color: #111111;
+    color: white;
     text-align: center;
   }
   display: flex;
