--- a/src/assets/scss/components/main/_case.scss
+++ b/src/assets/scss/components/main/_case.scss
@@ -9,7 +9,8 @@
 }
 .header-box-case {
   background-color: #2a292e;
-  height: 50px;
+  min-height: 50px;
+  height: auto;
 
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
