--- a/src/assets/scss/components/footer/_monitoring-modal.scss
+++ b/src/assets/scss/components/footer/_monitoring-modal.scss
@@ -13,6 +13,7 @@
   padding-bottom: 20px;
   max-height: 500px;
   height: 100%;
+  min-height: 500px;
   overflow-y: auto;
   @media (max-width: 425px) {
     max-height: fit-content;
@@ -35,4 +36,14 @@
     border-radius: 100px;
     background-color: #57555d;
   }
+}
+.box-list-qa {
+  min-height: 200px;
+  height: auto;
+  max-height: 200px;
+  overflow-x: auto;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
