--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -176,7 +176,6 @@
   gap: 20px;
   align-items: center;
   justify-content: center;
-  
 }
 .bezBtn {
   background-color: #dac2aa;
@@ -192,4 +191,11 @@
   justify-content: center;
   font-size: 16px;
   color: white;
+}
+
+.avatar-in-user-page {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin-top: 12px;
 }
