--- a/src/assets/scss/components/UI/_modal.scss
+++ b/src/assets/scss/components/UI/_modal.scss
@@ -69,7 +69,7 @@
   z-index: 12;
   padding: 32px;
   border-radius: 12px;
-
+  max-height: 700px;
   overflow: auto;
   background-color: #333237;
   overflow-x: hidden;
@@ -153,4 +153,10 @@
 
 .modal::-webkit-scrollbar {
   display: none;
+}
+
+.box-checkbox-test {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
